# KubeFlex

./: .gitignore  Dockerfile  README.md  average.py  backup_config  bash.exe.stackdump  cadvisor.yml  chart_data.py  config  crd.yml  criu.sh  criu_benchmark_results.csv  debian.sh  debug.yml  flexJob.yml  install-requirements.sh  main.py  new_chart_data.py  plot_daily_averages.py  pyvenv.cfg  storage.yml  update-controller.sh
MPI-Workload-main/: README.md
MPI-Workload-main/conjugate_gradient/: CMakeLists.txt  README.md
MPI-Workload-main/jacobi/: CMakeLists.txt  README.md  main.cpp
MPI-Workload-main/nbody/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
benchmark/: criu.sh  criu_benchmark.sh  criu_benchmark_results.csv  file_stress.c  migration_benchmark.sh  migration_benchmark_results.csv  mixed_workload.c  new.csv  new_bench.sh  results.csv  run_stress_test.sh  threaded_workload.c  workload.sh
data/: README.md  average.py  benchmark.py  benchmark_data.csv  chart_data.py  controller.py  foo.sql  min_carbon_sources.csv  min_values.py  plot.py  plot_csv.py  scrub_csv.py  upload_data.py
data/CAL/: US-CAL-BANC_2024_hourly.csv  (+4 more)
data_2020_2022/: README.md  plot_average.py
docs/: container-config.json
output/: plot_average.py
output/averages/: AK.csv  (+14 more)
src/: ARCHITECTURE.md  Dockerfile  Dockerfile.db  Dockerfile.main  README.md  controller.py  delete.sh  kubeconfig  main.py  restart.sh  run.sh  stress_test.c  test.sh  update-images.sh  update.sh
src/tests/antibody-sim/MPI-Workload-main/nbody/: CMakeLists.txt  main_nompi.cpp
(+163 files in other folders)
